[package]
name = "teonite-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "proxy-server",
    "grpc-server",
]

[build-dependencies]
tonic-build = "0.11"


[workspace.dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }